Tweaking CSS, text styles now match bg color
#66a3ff per Oofius Maximus

--- a/PrescriptchainFinder/index.html
+++ b/PrescriptchainFinder/index.html
@@ -33,11 +33,11 @@
 						<!-- Landing -->
 							<article id="me" class="panel">
 								<header>
-									<h1>Welcom to</h1>
+									<h1 style="color: #66a3ff;">Welcom to</h1>
 									<!-- <p>Find your patients' prescription fast</p> -->
 								</header>
 								<a href="#work" class="jumplink pic">
-									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
+									<span class="arrow icon fa-chevron-right"><span>Login</span></span>
 									<img src="images/PrescriptChain_Logo.png" alt="" />
 								</a>
 								<header>
@@ -117,7 +117,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; PrescriptChain.</li><li>Built with love by: <a href="Waitlisters.org">The Waitlisters</a></li>
+							&copy; PrescriptChain. Built by: <a href="waitlisters.org">the Waitlisters</a>
 						</ul>
 					</div>
 
