CSS color tweaks to match color theme

--- a/PrescriptchainFinder/index.html
+++ b/PrescriptchainFinder/index.html
@@ -33,7 +33,7 @@
 						<!-- Landing -->
 							<article id="me" class="panel">
 								<header>
-									<h1 style="color: #66a3ff;">Welcom to</h1>
+									<h1 style="color: #66a3ff;">Welcome to</h1>
 									<!-- <p>Find your patients' prescription fast</p> -->
 								</header>
 								<a href="#work" class="jumplink pic">
