--- a/PrescriptchainFinder/index.html
+++ b/PrescriptchainFinder/index.html
@@ -9,11 +9,15 @@
 		<title>PrescriptChain Finder</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!-- Mobile App stuffs -->
 		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+		<meta name="apple-mobile-web-app-title" content="PrescriptChain">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!-- Favicons -->
 		<link rel="apple-touch-icon" sizes="57x57" href="images/icons/apple-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="60x60" href="images/icons/apple-icon-60x60.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="images/icons/apple-icon-72x72.png">
@@ -39,17 +43,17 @@
 
 				<!-- Nav -->
 					<nav id="nav">
-						<a href="#me" class="icon fa-home active"><span>Finder</span></a>
-						<a href="#work" class="icon fa-folder"><span>Login</span></a>
-						<a href="#contact" class="icon fa-envelope"><span>Sign Up</span></a>
-						<a href="#" class="icon fa-lock"><span>Enter</span></a>
+						<a href="#Home" class="icon fa-home active"><span>Home</span></a>
+						<a href="#Login" class="icon fa-sign-in"><span>Login</span></a>
+						<a href="#SignUp" class="icon fa-user-plus"><span>Sign Up</span></a>
+						<a href="#" class="icon fa-user-md"><span>Enter</span></a>
 					</nav>
 
 				<!-- Main -->
 					<div id="main">
 
 						<!-- Landing -->
-							<article id="me" class="panel">
+							<article id="SignUp" class="panel">
 								<header>
 									<h1 style="color: #66a3ff;">Welcome to</h1>
 									<!-- <p>Find your patients' prescription fast</p> -->
@@ -64,7 +68,7 @@
 							</article>
 
 						<!-- Login -->
-							<article id="work" class="panel">
+							<article id="Login" class="panel">
 
 
 								<section>
@@ -98,7 +102,7 @@
 							</article>
 
 						<!-- Sign Up -->
-							<article id="contact" class="panel">
+							<article id="SignUp" class="panel">
 
 		<div id="register" class="animate form">
 			<form  action="mysuperscript.php" autocomplete="on">
