Fixed page jumps

--- a/PrescriptchainFinder/index.html
+++ b/PrescriptchainFinder/index.html
@@ -53,7 +53,7 @@
 					<div id="main">
 
 						<!-- Landing -->
-							<article id="SignUp" class="panel">
+							<article id="Home" class="panel">
 								<header>
 									<h1 style="color: #66a3ff;">Welcome to</h1>
 									<!-- <p>Find your patients' prescription fast</p> -->
