Oops, forgot an href

--- a/PrescriptchainFinder/index.html
+++ b/PrescriptchainFinder/index.html
@@ -58,7 +58,7 @@
 									<h1 style="color: #66a3ff;">Welcome to</h1>
 									<!-- <p>Find your patients' prescription fast</p> -->
 								</header>
-								<a href="#work" class="jumplink pic">
+								<a href="#Login" class="jumplink pic">
 									<span class="arrow icon fa-chevron-right"><span>Login</span></span>
 									<img src="images/PrescriptChain_Logo.png" alt="" />
 								</a>
